--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = [
     {name = "Greg Oliveira",email = "gregoryomelo@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11.0,<3.12.0"
 dependencies = [
+    "loguru (>=0.7.3,<0.8.0)"
 ]
 
 
