--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,8 @@ repos:
     -   id: detect-private-key
     -   id: check-added-large-files
         args: ['--maxkb=1024']
+    - id: no-commit-to-branch
+      args: [--branch, master, --branch, main]
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.8.0
