--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,3 +1,8 @@
+x-environment: &aws_env
+  AWS_ACCESS_KEY_ID: test
+  AWS_SECRET_ACCESS_KEY: test
+  AWS_DEFAULT_REGION: us-east-1
+
 services:
   localstack:
     image: localstack/localstack
@@ -5,37 +10,47 @@ services:
     ports:
       - "4566:4566"
     environment:
-      - SERVICES=s3
-      - DEFAULT_REGION=us-east-1
-      - DATA_DIR=/var/lib/localstack  # Keep internal files separate
-      - LOCALSTACK_VOLUME_DIR=/var/lib/localstack
+      <<: *aws_env # Inherit global AWS env variables
+      SERVICES: s3
+    # - PERSISTENCE=1 This only works for Pro Image
     volumes:
-      # Persisting data and avoid anonymous volumes
-      # Internal LocalStack data
+      # Avoid anonymous containers
       - localstack_data:/var/lib/localstack
-      # Separate storage for application files
-      - localstack_storage:/data
 
   azurite:
     image: mcr.microsoft.com/azure-storage/azurite
     container_name: azurite
-    command: "azurite -l /var/lib/azurite"
-    environment:
-      - AZURITE_WORKSPACE=/var/lib/azurite
+    command: "azurite --blobHost 0.0.0.0 --queueHost 0.0.0.0 --tableHost 0.0.0.0 -l /storage"
     ports:
       - "10000:10000"
+      - "10001:10001"
+      - "10002:10002"
     volumes:
       # Persisting data and avoid anonymous volumes
-      # Internal Azurite data
-      - azurite_data:/var/lib/azurite
-      # Separate storage for application files
-      - azurite_storage:/data
+      # Internal Azurite metadata
+      - azurite_data:/data
+      # Separate storage for application files (if needed)
+      - azurite_storage:/storage
+
+  setup-s3:
+    image: amazon/aws-cli
+    container_name: setup-s3
+    environment:
+      <<: *aws_env # Inherit global AWS env variables
+    depends_on:
+      - localstack
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        echo "Waiting for LocalStack to start..."
+        sleep 5
+        echo "Creating S3 bucket..."
+        aws --endpoint-url=http://localstack:4566 s3 mb s3://test-bucket
+        echo "S3 bucket created."
 
 volumes:
   localstack_data:
     name: airflow-datawarehouse_localstack_internal
-  localstack_storage:
-    name: airflow-datawarehouse_localstack_storage
   azurite_data:
     name: airflow-datawarehouse_azurite_internal
   azurite_storage:
