--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ requires-python = ">=3.11.0,<3.12.0"
 dependencies = [
     "loguru (>=0.7.3,<0.8.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "boto3 (>=1.36.13,<2.0.0)"
+    "boto3 (>=1.36.13,<2.0.0)",
+    "azure-storage-blob (>=12.24.1,<13.0.0)",
+    "azure-identity (>=1.19.0,<2.0.0)",
+    "pytest (>=8.3.4,<9.0.0)"
 ]
 
 
