test(aws_tools): add tests for s3client class

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "boto3 (>=1.36.13,<2.0.0)",
     "azure-storage-blob (>=12.24.1,<13.0.0)",
     "azure-identity (>=1.19.0,<2.0.0)",
-    "pytest (>=8.3.4,<9.0.0)"
+    "pytest (>=8.3.4,<9.0.0)",
+    "moto (>=5.0.28,<6.0.0)"
 ]
 
 
