--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-# Astro Runtime includes the following pre-installed providers packages: https://www.astronomer.io/docs/astro/runtime-image-architecture#provider-packages
+loguru>=0.7.3,<0.8.0
+python-dotenv>=1.0.1,<2.0.0
+boto3>=1.36.13,<2.0.0
+azure-storage-blob>=12.24.1,<13.0.0
+azure-identity>=1.19.0,<2.0.0
+pytest>=8.3.4,<9.0.0
+moto>=5.0.28,<6.0.0
+pytest-mock>=3.14.0,<4.0.0
