--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "azure-identity (>=1.19.0,<2.0.0)",
     "pytest (>=8.3.4,<9.0.0)",
     "moto (>=5.0.28,<6.0.0)",
-    "pytest-mock (>=3.14.0,<4.0.0)"
+    "pytest-mock (>=3.14.0,<4.0.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 
