test(test_dags): change tests for each dag
Tags test was removed and a execution dag was added.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ autopep8 = "^2.3.2"
 pydocstyle = "^6.3.0"
 flake8 = "^7.1.1"
 flake8-bugbear = "^24.12.12"
+apache-airflow = "2.10.4"
 
 [tool.isort]
 profile = "black"
